test/library/standard/Sort/errors/sortDomainArray.sparse1.good
sortDomainArray.chpl:33: error: sort() is not supported on domains
